# AurumFi

./: Dockerfile  package-lock.json  render.yaml
Backend/:  README.md  .env  Cargo.toml  application.yml  config.toml  mywallet_wallet.json  pom.xml
Backend/src/: api.rs  blockchain.rs  config.rs  lib.rs  main.rs  token.rs  utils.rs  wallet.rs
Backend/src/api/: mod.rs  rest.rs  rpc.rs
Backend/src/blockchain/: block.rs  blockchain.rs  chain.rs  consensus.rs  mod.rs  neo_chain.rs  network.rs  storage.rs  transaction.rs  wallet.rs
Backend/src/main/java/com/aurumfi/: AurumFiApplication.java
Backend/src/main/java/com/aurumfi/config/: CorsConfig.java
Backend/src/main/java/com/aurumfi/controller/: AdminController.java  BlockchainController.java  ExchangeController.java  TestController.java
Backend/src/main/java/com/aurumfi/core/: Blockchain.java
Backend/src/main/java/com/aurumfi/model/: Block.java  Transaction.java  TransactionInput.java  TransactionOutput.java  Wallet.java
Backend/src/main/java/com/aurumfi/network/: BlockchainNetworkHandler.java  NetworkServer.java  (+1 more)
Backend/src/main/resources/: application.properties
Backend/src/network/: mod.rs  node.rs  p2p.rs  rpc.rs
Backend/src/smart_contracts/: gas_system.rs  mod.rs  nep5.rs  storage.rs  vm.rs
Backend/src/token/: core.rs  governance.rs  nft.rs
Backend/src/token_backup/: economics.rs  mod.rs
Backend/src/utils/: crypto.rs  logger.rs
Backend/src/utils_backup/: config.rs  error.rs  mod.rs
Backend/src/wallet/: keypair.rs  mod.rs  multisig.rs  transaction.rs
Backend/src/wallet_backup/: keypair.rs
(+21 files in other folders)
