[package]
name = "aurumfi-neo-token"
version = "0.1.0"
edition = "2021"
description = "AurumFi NEO-style cryptocurrency token implementation"
license = "MIT"
authors = ["AurumFi Team"]
repository = "https://github.com/hryhoriistruk/AurumFi"

[features]
default = ["full-node"]
full-node = ["network", "consensus", "rpc"]
light-client = ["rpc"]
testnet = ["full-node"]
network = []
consensus = []
rpc = []

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = { version = "0.8", features = ["std_rng"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
ed25519-dalek = { version = "2.2", features = ["serde"] }
sha2 = "0.10"
sha3 = "0.10"
bs58 = "0.5"
hex = "0.4"
lazy_static = "1.4"
config = "0.13"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"
jsonrpc-ws-server = "18.0"
futures = "0.3"
prometheus = "0.13"
metrics = "0.20"
tokio-io = "0.1"
toml = "0.7"   # або новіша версія

[dev-dependencies]
rstest = "0.18"
tempfile = "3.8"

[workspace]
members = ["."]
